--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -4,16 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# 数据特性\n",
-                "\n",
-                "数据特性是指数据本身的属性或特点。\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 数据类型\n",
+                "# 数据类型 & 特性\n",
                 "\n",
                 "Python 中标准数据类型包括数字类型、布尔型（`bool`）、字符串（`str`）、元组（`tuple`）、列表（`list`）、集合（`set`）、字典（`dict`）以及一个特殊的类型 `NoneType`。\n",
                 "\n",
@@ -24,7 +15,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 27,
             "metadata": {},
             "outputs": [
                 {
@@ -33,7 +24,7 @@
                             "NoneType"
                         ]
                     },
-                    "execution_count": 50,
+                    "execution_count": 27,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -47,35 +38,41 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 容器类型\n",
+                "## 数据特性\n",
                 "\n",
-                "容器类型是可容纳多个元素的对象的数据类型。包括：元组、列表、集合、字典。\n"
+                "数据特性是指数据本身的属性或特点。\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 可变与不可变类型\n",
+                "### 可变与不可变性\n",
                 "\n",
-                "可变类型对象可以在原内存地址上进行就地修改，而不需要重新分配内存。包括：列表、集合、字典。\n",
+                "- 可变性是指对象可以在原内存地址上进行就地修改，而不需要重新分配内存。\n",
                 "\n",
-                "不可变类型的对象保持着固定的值，无法通过任何操作来改变其状态。包括：数字、字符串、元组。\n",
+                "列表、集合和字典都是可变对象类型。\n",
                 "\n",
-                "> 可通过 `id` 方法获得对象的内存标识符。\n"
+                "- 不可变性是指对象保持着固定的值，无法通过任何操作来改变其状态。\n",
+                "\n",
+                "数字、字符串和元组都是不可变对象类型。\n",
+                "\n",
+                "> 可变对象和不可变对象在进行复制操作时表现不同。请看[深拷贝 & 浅拷贝]('./copy.ipynb')\n",
+                "\n",
+                "> 通过 `id` 方法可获得对象的内存标识。\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 51,
+            "execution_count": 28,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "4531659648\n",
-                        "4531659648\n"
+                        "4408561664\n",
+                        "4408561664\n"
                     ]
                 }
             ],
@@ -94,27 +91,27 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 可哈希类型\n",
+                "### 可哈希性\n",
                 "\n",
-                "可哈希类型是指那些在其生命周期中状态保持不变的对象类型。生命周期指的是对象存在的时间段，从对象的创建到销毁的整个过程。\n",
+                "可哈希是指对象在其生命周期中状态保持不变。生命周期指的是对象存在的时间段，从对象的创建到销毁的整个过程。\n",
                 "\n",
-                "简单来说，可哈希类型对象从创建到销毁都是不可变的。显然，不可变类型数据都是可哈希的。\n",
+                "简单来说，可哈希对象从创建到销毁都是不可变的。显然，不可变对象都是可哈希的。\n",
                 "\n",
-                "> 可通过 `hash` 方法获取可哈希对象的哈希值。\n"
+                "> 通过 `hash` 方法可获取可哈希对象的哈希值。\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 29,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "6994225863741334623"
+                            "6717373325313123974"
                         ]
                     },
-                    "execution_count": 52,
+                    "execution_count": 29,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -129,21 +126,21 @@
             "source": [
                 "#### 自定义可哈希对象类\n",
                 "\n",
-                "> 内置方法 `repr` 用于返回一个对象的字符串表示形式。\n"
+                "> 内置方法 `repr` 返回一个对象的字符串表示形式。\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 59,
+            "execution_count": 30,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "-4484763301684064448"
+                            "-5603055806371908543"
                         ]
                     },
-                    "execution_count": 59,
+                    "execution_count": 30,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -170,167 +167,54 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 可迭代类型\n",
+                "### 可迭代性\n",
                 "\n",
-                "可迭代类型是指可以使用迭代器进行遍历的对象。包括字符串、元组、列表、集合、字典。\n",
+                "可迭代是指对象可被迭代器遍历。\n",
                 "\n",
-                "更多请看[迭代器 & 可迭代对象 & 生成器]('./iterator_generator.ipynb')\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可比较性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可调用性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可索引性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可切片性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可追加性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可序列化性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可拷贝性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 可回收性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 容器性\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 类型分类\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### 按`数据可变性`划分\n",
+                "字符串、元组、列表、集合和字典都是可迭代的。\n",
                 "\n",
-                "- 可变（mutable）：可变数据可以在原始对象所在的内存地址上进行修改，而不是创建一个新的对象\n",
-                "  - 包括：列表、集合、字典\n",
-                "- 不可变（immutable）：不可变数据则不可以在原始对象所在的内存地址上直接进行修改\n",
-                "  - 包括：数字、字符串、元组，冻结集合\n",
-                "  - 可哈希对象是不可变对象\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "4545875632\n",
-                        "4545575744\n"
-                    ]
-                }
-            ],
-            "source": [
-                "# 字符串无法在原内存地址上直接进行修改，只能通过新建对象的方式进行替换\n",
-                "\n",
-                "# 两次打印的内存标识不一样\n",
-                "s = \"this is a str\"\n",
-                "print(id(s))\n",
-                "\n",
-                "s = \"this is a new str\"\n",
-                "print(id(s))"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "4538511360\n",
-                        "4538511360\n"
-                    ]
-                }
-            ],
-            "source": [
-                "# 而列表则可以直接在原始对象上进行修改\n",
-                "\n",
-                "# 列表 l 新增加了一个元素，但是内存地址并没有改变\n",
-                "l = [1, 2]\n",
-                "print(id(l))\n",
-                "\n",
-                "l.append(3)\n",
-                "print(id(l))"
+                "详细介绍看[迭代器 & 可迭代对象 & 生成器]('./iterator_generator.ipynb')\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "tip: 字典的键必须为不可变数据类型\n"
+                "## 类型划分\n",
+                "\n",
+                "按照特性与共性，划分数据类型。\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 按`序列类型`划分\n",
+                "### 容器类型\n",
                 "\n",
-                "- 序列类型：元素在内存中连续存储。序列类型可通过索引访问每个元素，且元素可以为不同类型。\n",
+                "容器类型是可容纳多个元素的对象的数据类型。包括：元组、列表、集合、字典。\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 序列类型\n",
                 "\n",
-                "  - 包括：字符串、元组、列表\n",
+                "序列类型是一种包含多个元素的数据类型，并且这些元素按照一定的顺序排列。字符串、元组、列表都是序列类型。\n",
                 "\n",
-                "- 非序列类型：元素在内存中非连续存储。非序列类型的元素不可访问，因为它们没有像序列类型那样的索引机制。\n",
+                "序列类型的共同特性：\n",
                 "\n",
-                "  - 包括：数字、集合、字典\n",
+                "- 可迭代性\n",
                 "\n",
+                "- 可索引性\n",
+                "\n",
+                "- 可切片性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
                 "#### 序列类型的通用操作：（操作的具体解释写在类型分章节）\n",
                 "\n",
                 "假如有两个序列：x，长度为 8，y，长度为 2\n"
@@ -425,18 +309,6 @@
                 "- 元素计数：使用 `count` 函数统计序列中指定元素的出现次数。\n",
                 "\n",
                 "  x 中数字 3 出现的次数：`x.count(3)`\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "2. 容器类型：表示容纳多个值的数据类型\n",
-                "\n",
-                "- 列表\n",
-                "- 集合\n",
-                "- 字典\n",
-                "- 元组\n"
             ]
         }
     ],
