--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -51,11 +51,11 @@
                 "\n",
                 "- 可变性是指对象可以在原内存地址上进行就地修改，而不需要重新分配内存。\n",
                 "\n",
-                "列表、集合和字典都是可变对象类型。\n",
+                "  列表、集合和字典都是可变对象类型。\n",
                 "\n",
                 "- 不可变性是指对象保持着固定的值，无法通过任何操作来改变其状态。\n",
                 "\n",
-                "数字、字符串和元组都是不可变对象类型。\n",
+                "  数字、字符串和元组都是不可变对象类型。\n",
                 "\n",
                 "> 可变对象和不可变对象在进行复制操作时表现不同。请看[深拷贝 & 浅拷贝]('./copy.ipynb')\n",
                 "\n",
@@ -77,7 +77,7 @@
                 }
             ],
             "source": [
-                "# 列表变量 b 在原内存地址上进行了元素增加操作\n",
+                "# 对列表变量 b 在原内存地址上进行元素增加\n",
                 "b = []\n",
                 "\n",
                 "print(id(b))\n",
@@ -154,7 +154,7 @@
                 "        if self.value.__hash__:\n",
                 "            return self.value.__hash__()\n",
                 "        else:\n",
-                "            # 方法 hash 只接收不可变类型，因此把 value 转为字符串\n",
+                "            # 方法 hash 只接收不可变对象，因此把 value 转为字符串\n",
                 "            return hash(repr(self.value))\n",
                 "\n",
                 "\n",
@@ -191,7 +191,9 @@
             "source": [
                 "### 容器类型\n",
                 "\n",
-                "容器类型是可容纳多个元素的对象的数据类型。包括：元组、列表、集合、字典。\n"
+                "容器类型是可容纳多个元素的对象的数据类型。\n",
+                "\n",
+                "元组、列表、集合和字典都是容器类型。\n"
             ]
         },
         {
@@ -200,115 +202,138 @@
             "source": [
                 "### 序列类型\n",
                 "\n",
-                "序列类型是一种包含多个元素的数据类型，并且这些元素按照一定的顺序排列。字符串、元组、列表都是序列类型。\n",
+                "序列类型是一种包含多个元素的数据类型，这些元素按照一定的顺序排列。\n",
                 "\n",
-                "序列类型的共同特性：\n",
+                "字符串、元组、列表都是序列类型。\n",
                 "\n",
-                "- 可迭代性\n",
+                "序列类型的一些共同特性：\n",
                 "\n",
-                "- 可索引性\n",
+                "- 可迭代\n",
                 "\n",
-                "- 可切片性\n"
+                "- 索引访问\n",
+                "\n",
+                "可以使用索引来访问序列中的元素。可以使用正整数和负整数来访问元素，其中正整数索引从左往右从 0 递增，负整数索引从右往左从 -1 递减。\n",
+                "\n",
+                "- 切片操作\n",
+                "\n",
+                "可以通过切片操作获取序列的子序列。切片操作使用`[start:stop:step]`的形式，表示从索引 `start` 开始（闭），到索引 `stop` 结束（开），步长为 `step`。\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "#### 序列类型的通用操作：（操作的具体解释写在类型分章节）\n",
-                "\n",
-                "假如有两个序列：x，长度为 8，y，长度为 2\n"
+                "- 可拼接（`+`）、可重复（`*`）\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 43,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'foofoobar'"
+                        ]
+                    },
+                    "execution_count": 43,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# 字符串先重复后拼接\n",
+                "\"foo\" * 2 + \"bar\""
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 44,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "[1, 2, 1, 2, 3, 4]"
+                        ]
+                    },
+                    "execution_count": 44,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# 列表先重复后拼接\n",
+                "[1, 2] * 2 + [3, 4]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 42,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "[1, 2, 3, 4]"
+                        ]
+                    },
+                    "execution_count": 42,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# 元组先重复后拼接\n",
+                "(1, 2) * 2 + (3, 4)"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "- 连接：使用 + 运算符来连接两个序列，生成一个新的序列。\n",
-                "\n",
-                "  `x + y` 获得一个长度为 10 的新序列\n"
+                "- 可计数\n"
             ]
         },
         {
-            "cell_type": "markdown",
+            "cell_type": "code",
+            "execution_count": 47,
             "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "2"
+                        ]
+                    },
+                    "execution_count": 47,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
-                "- 重复：使用 \\* 运算符将序列重复指定次数，生成一个新的序列。\n",
-                "\n",
-                "  `x * 2` 获得一个由 x 重复两次获得的新序列\n"
+                "\"foo\".count(\"o\")"
             ]
         },
         {
-            "cell_type": "markdown",
+            "cell_type": "code",
+            "execution_count": 48,
             "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "1"
+                        ]
+                    },
+                    "execution_count": 48,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
-                "- 长度获取：使用 `len` 函数获取序列的长度，即序列中元素的个数。\n",
-                "\n",
-                "  `len(x) == 8`\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 索引访问：可使用索引来访问序列中的单个元素。\n",
-                "\n",
-                "  获取 x 第 3 个元素：`x[2]`\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 元素位置获取：使用 `index` 方法获取序列中指定元素首次出现的位置。\n",
-                "\n",
-                "  如果找不到对应元素，`index` 返回错误 `ValueError`\n",
-                "\n",
-                "  x 中数字 4 的索引：`x.index(4)`\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 切片操作：切片操作用于获取序列中的子序列，可以指定起始索引和结束索引（不包括结束索引本身）。使用方括号和冒号 [:] 来实现。\n",
-                "\n",
-                "  获取 x 从 2 到 6 的片段：`x[2:7]`\n",
-                "  `[:]` 表示从开始到结尾\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 成员运算：使用 `in` 和 `not in` 运算符来判断某个元素是否存在于序列中。\n",
-                "\n",
-                "  判断数字 9 是否在序列 x 中：`9 in x` 或 `9 not in x`\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 迭代：序列可以使用 for 循环进行迭代，依次访问序列中的每个元素。\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 最大值和最小值：使用 `max` 和 `min` 函数分别获取序列中的最大值和最小值。\n",
-                "\n",
-                "  x 中最小值：`min(x)`，x 中最大值：`max(x)`\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "- 元素计数：使用 `count` 函数统计序列中指定元素的出现次数。\n",
-                "\n",
-                "  x 中数字 3 出现的次数：`x.count(3)`\n"
+                "[1, 2, 3].count(1)"
             ]
         }
     ],
