--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -15,7 +15,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 92,
             "metadata": {},
             "outputs": [
                 {
@@ -24,7 +24,7 @@
                             "NoneType"
                         ]
                     },
-                    "execution_count": 27,
+                    "execution_count": 92,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -64,15 +64,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 93,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "4408561664\n",
-                        "4408561664\n"
+                        "4409239552\n",
+                        "4409239552\n"
                     ]
                 }
             ],
@@ -102,7 +102,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 94,
             "metadata": {},
             "outputs": [
                 {
@@ -111,7 +111,7 @@
                             "6717373325313123974"
                         ]
                     },
-                    "execution_count": 29,
+                    "execution_count": 94,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -131,7 +131,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 95,
             "metadata": {},
             "outputs": [
                 {
@@ -140,7 +140,7 @@
                             "-5603055806371908543"
                         ]
                     },
-                    "execution_count": 30,
+                    "execution_count": 95,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -189,17 +189,6 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 容器类型\n",
-                "\n",
-                "容器类型是可容纳多个元素的对象的数据类型。\n",
-                "\n",
-                "元组、列表、集合和字典都是容器类型。\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
                 "### 序列类型\n",
                 "\n",
                 "序列类型是一种包含多个元素的数据类型，这些元素按照一定的顺序排列。\n",
@@ -212,11 +201,40 @@
                 "\n",
                 "- 索引访问\n",
                 "\n",
-                "可以使用索引来访问序列中的元素。可以使用正整数和负整数来访问元素，其中正整数索引从左往右从 0 递增，负整数索引从右往左从 -1 递减。\n",
+                "  可以使用索引来访问序列中的元素。可以使用正整数和负整数来访问元素，其中正整数索引从左往右从 0 递增，负整数索引从右往左从 -1 递减。\n",
                 "\n",
                 "- 切片操作\n",
                 "\n",
-                "可以通过切片操作获取序列的子序列。切片操作使用`[start:stop:step]`的形式，表示从索引 `start` 开始（闭），到索引 `stop` 结束（开），步长为 `step`。\n"
+                "  可以通过切片操作获取序列的子序列。切片操作使用`[start:stop:step]`的形式，表示从索引 `start` 开始（闭），到索引 `stop` 结束（开），步长为 `step`。\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "- 元素查找\n",
+                "\n",
+                "> `index` 方法可查找序列类型中特定元素第一次出现的索引。如果要查找的元素不存在，引发 `ValueError` 异常。\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 96,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "0"
+                        ]
+                    },
+                    "execution_count": 96,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "[1, 2].index(1)"
             ]
         },
         {
@@ -228,28 +246,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 43,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "'foofoobar'"
-                        ]
-                    },
-                    "execution_count": 43,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "# 字符串先重复后拼接\n",
-                "\"foo\" * 2 + \"bar\""
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 44,
+            "execution_count": 97,
             "metadata": {},
             "outputs": [
                 {
@@ -258,35 +255,17 @@
                             "[1, 2, 1, 2, 3, 4]"
                         ]
                     },
-                    "execution_count": 44,
+                    "execution_count": 97,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
+                "# 字符串先重复后拼接\n",
+                "\"foo\" * 2 + \"bar\"\n",
+                "\n",
                 "# 列表先重复后拼接\n",
                 "[1, 2] * 2 + [3, 4]"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 42,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "[1, 2, 3, 4]"
-                        ]
-                    },
-                    "execution_count": 42,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "# 元组先重复后拼接\n",
-                "(1, 2) * 2 + (3, 4)"
             ]
         },
         {
@@ -298,27 +277,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 47,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "2"
-                        ]
-                    },
-                    "execution_count": 47,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "\"foo\".count(\"o\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 48,
+            "execution_count": 98,
             "metadata": {},
             "outputs": [
                 {
@@ -327,13 +286,119 @@
                             "1"
                         ]
                     },
-                    "execution_count": 48,
+                    "execution_count": 98,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
+                "\"foo\".count(\"o\")\n",
+                "\n",
                 "[1, 2, 3].count(1)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 容器类型\n",
+                "\n",
+                "容器类型是可容纳多个元素的对象的数据类型。\n",
+                "\n",
+                "元组、列表、集合和字典都是容器类型。\n",
+                "\n",
+                "序列类型除了字符串都是容器类型，字符串虽不算容器类型，但它却支持很多容器类型的特性。\n",
+                "\n",
+                "容器类型的一些共同特性（以下特性字符串同样支持）：\n",
+                "\n",
+                "- 可迭代\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "- 长度\n",
+                "\n",
+                "  通过内置方法 `len` 获取对象长度。\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 99,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "2"
+                        ]
+                    },
+                    "execution_count": 99,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "len({\"a\": 1, \"b\": 2})"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "- 包含性检查\n",
+                "\n",
+                "  使用 `in` 和 `not in` 操作符来检查容器中是否包含某个特定元素。\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 100,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "True"
+                        ]
+                    },
+                    "execution_count": 100,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "1 in {1, 2, 3}"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "- 最大/最小值\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 101,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'b'"
+                        ]
+                    },
+                    "execution_count": 101,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "min({\"a\": 1, \"b\": 2})\n",
+                "\n",
+                "max({\"a\": 1, \"b\": 2})"
             ]
         }
     ],
