--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -15,7 +15,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 92,
+            "execution_count": 102,
             "metadata": {},
             "outputs": [
                 {
@@ -24,7 +24,7 @@
                             "NoneType"
                         ]
                     },
-                    "execution_count": 92,
+                    "execution_count": 102,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -64,15 +64,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 93,
+            "execution_count": 103,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "4409239552\n",
-                        "4409239552\n"
+                        "4402982208\n",
+                        "4402982208\n"
                     ]
                 }
             ],
@@ -102,7 +102,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 94,
+            "execution_count": 104,
             "metadata": {},
             "outputs": [
                 {
@@ -111,7 +111,7 @@
                             "6717373325313123974"
                         ]
                     },
-                    "execution_count": 94,
+                    "execution_count": 104,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -131,7 +131,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 95,
+            "execution_count": 105,
             "metadata": {},
             "outputs": [
                 {
@@ -140,7 +140,7 @@
                             "-5603055806371908543"
                         ]
                     },
-                    "execution_count": 95,
+                    "execution_count": 105,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -219,7 +219,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 96,
+            "execution_count": 106,
             "metadata": {},
             "outputs": [
                 {
@@ -228,7 +228,7 @@
                             "0"
                         ]
                     },
-                    "execution_count": 96,
+                    "execution_count": 106,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -246,7 +246,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 97,
+            "execution_count": 107,
             "metadata": {},
             "outputs": [
                 {
@@ -255,7 +255,7 @@
                             "[1, 2, 1, 2, 3, 4]"
                         ]
                     },
-                    "execution_count": 97,
+                    "execution_count": 107,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -277,7 +277,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 98,
+            "execution_count": 108,
             "metadata": {},
             "outputs": [
                 {
@@ -286,7 +286,7 @@
                             "1"
                         ]
                     },
-                    "execution_count": 98,
+                    "execution_count": 108,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -325,7 +325,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 99,
+            "execution_count": 109,
             "metadata": {},
             "outputs": [
                 {
@@ -334,7 +334,7 @@
                             "2"
                         ]
                     },
-                    "execution_count": 99,
+                    "execution_count": 109,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -354,7 +354,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 100,
+            "execution_count": 110,
             "metadata": {},
             "outputs": [
                 {
@@ -363,7 +363,7 @@
                             "True"
                         ]
                     },
-                    "execution_count": 100,
+                    "execution_count": 110,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -381,7 +381,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 101,
+            "execution_count": 111,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'a'"
+                        ]
+                    },
+                    "execution_count": 111,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "min({\"a\": 1, \"b\": 2})"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 112,
             "metadata": {},
             "outputs": [
                 {
@@ -390,14 +410,12 @@
                             "'b'"
                         ]
                     },
-                    "execution_count": 101,
+                    "execution_count": 112,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "min({\"a\": 1, \"b\": 2})\n",
-                "\n",
                 "max({\"a\": 1, \"b\": 2})"
             ]
         }
