--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -6,15 +6,13 @@
    "source": [
     "# 数字类型\n",
     "\n",
-    "数字类型即非`可变类型`也非`序列类型`（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
-    "\n",
     "数字类型包括：\n",
     "\n",
     "- `int`: 整型（长整型），即整数\n",
     "- `float`: 浮点型（双精度），即小数\n",
     "- `complex`: 复数类型，由 a+bj 表示，a 为实数部，b 为虚数部\n",
     "\n",
-    "tip: 在 python 中布尔型是 `int` 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')\n"
+    "> Python 中布尔型是 `int` 类型的子类型，详细解释在[布尔型]('./bool.ipynb')\n"
    ]
   },
   {
