--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -6,7 +6,7 @@
             "source": [
                 "# 数据类型 & 特性\n",
                 "\n",
-                "Python 中标准数据类型包括数字类型、布尔型（`bool`）、字符串（`str`）、元组（`tuple`）、列表（`list`）、集合（`set`）、字典（`dict`）以及一个特殊的类型 `NoneType`。\n",
+                "Python 中标准数据类型包括数字类型、字符串（`str`）、元组（`tuple`）、列表（`list`）、集合（`set`）、字典（`dict`）以及一个特殊的类型 `NoneType`。\n",
                 "\n",
                 "数字类型是由整型（`int`），浮点型（`float`）和复数类型（`complex`）组成的。\n",
                 "\n",
