--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -4,81 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数字类型\n",
+    "# 数字\n",
     "\n",
     "数字类型包括：\n",
     "\n",
-    "- `int`: 整型（长整型），即整数\n",
-    "- `float`: 浮点型（双精度），即小数\n",
-    "- `complex`: 复数类型，由 a+bj 表示，a 为实数部，b 为虚数部\n",
-    "\n",
-    "> Python 中布尔型是 `int` 类型的子类型，详细解释在[布尔型]('./bool.ipynb')\n"
+    "- `int`: 整型（长整型），即整数。\n",
+    "- `float`: 浮点型（双精度），即小数。\n",
+    "- `complex`: 复数类型，表示为 `a+bj`，`a` 为实数部，`b` 为虚数部。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建一个数字\n"
+    "## `int`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 通过字面值形式创建\n"
+    "### 整数创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1+2j)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 整数型字面值\n",
-    "1  # 正整数\n",
-    "-1  # 负整数\n",
-    "0xA0F  # 十六进制整数\n",
-    "0o37  # 八进制整数\n",
-    "\n",
-    "# 浮点型字面值\n",
-    "1.1  # 小数\n",
-    "2.5e2  # 科学计数法表示的小数\n",
-    "\n",
-    "# 复数类型字面值\n",
-    "1 + 2j"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 通过构造函数创建\n",
-    "\n",
-    "数字类型 `int`、`float` 和 `complex` 都有各自同名函数，它们是对应类型的构造/转换函数，本节我们只用它们构造数字，数字转换看这节 [类型转换]('./type_conversion.ipynb')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 整数创建\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -87,27 +38,209 @@
        "0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 通过 int 方法创建一个默认为 0 的整数\n",
+    "# 字面值形式\n",
+    "# 正整数\n",
+    "1\n",
     "\n",
-    "int()  # 0"
+    "# 负整数\n",
+    "-1\n",
+    "\n",
+    "# 通过 int 方法创建一个默认值为 0 的整数\n",
+    "int()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 浮点数创建\n"
+    "### 整型转换\n",
+    "\n",
+    "整数的类型转换用的还是上面的 `int` 方法。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 布尔型转整型\n",
+    "\n",
+    "> Python 中布尔型是 `int` 类型的子类型，详细解释在[布尔型]('./bool.ipynb')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 浮点型转整型\n",
+    "\n",
+    "> 向 `0` 靠近，保留整数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(32.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-32"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(-32.6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 实现了 `__int__` 方法的对象\n",
+    "\n",
+    "> 方法 `int` 调用对象内部的魔术方法 `__int__` 完成整型转换。\n",
+    "\n",
+    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class MyIntClass:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    # 注意：__int__ 返回的必须是 int 型\n",
+    "    def __int__(self) -> int:\n",
+    "        return self.value\n",
+    "\n",
+    "\n",
+    "my_num = MyIntClass(20)\n",
+    "int(my_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 整数字面值字符串\n",
+    "\n",
+    "  可以带正负号，首尾可以有空格。\n",
+    "\n",
+    "> `int` 方法支持 `base` 参数（范围为 2-36），指定待转换值的进制，当 `base` 为 `0` 时，`int` 会根据数字前缀确定解析进制。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 整数字面值字符串\n",
+    "int(\"42\")\n",
+    "\n",
+    "# 负整数字面值字符串\n",
+    "int(\"  -42  \")\n",
+    "\n",
+    "# 解析为十进制\n",
+    "int(\"42\", 0)\n",
+    "\n",
+    "# 解析为二进制\n",
+    "int(\"0b101010\", 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `float`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 浮点数创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -116,15 +249,57 @@
        "0.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 通过 float 方法创建一个默认为 0.0 的小数\n",
+    "# 字面值形式\n",
     "\n",
-    "float()  # 0.0"
+    "# 小数\n",
+    "1.1\n",
+    "\n",
+    "# 科学计数法表示\n",
+    "2.5e2\n",
+    "\n",
+    "# 通过 float 方法创建一个默认值为 0.0 的小数\n",
+    "float()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 浮点型转换\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `complex`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1+2j)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 复数类型字面值\n",
+    "1 + 2j"
    ]
   },
   {
@@ -138,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +322,7 @@
        "(-3+0j)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +370,7 @@
        "9"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +418,7 @@
        "1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +439,7 @@
        "10.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +462,7 @@
        "4"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +483,7 @@
        "4"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +504,7 @@
        "3.556"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +525,7 @@
        "8"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,57 +539,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 最大/最小值\n",
-    "\n",
-    "从一组`序列类型`里取最大/最小值\n",
-    "\n",
-    "- `max`\n",
-    "- `min`\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(1, 2)\n",
-    "min((1, 2))\n",
-    "min([1, 2])\n",
-    "\n",
-    "# max 使用方式同上"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 随机数操作\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,16 +567,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "5"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9763965500235539"
+       "0.07985496689478122"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,16 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.644884831573863"
+       "6.2605546923115964"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,16 +630,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 8, 3, 1]"
+       "[1, 5, 3, 8]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +669,7 @@
        "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
