--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -278,76 +278,214 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `complex`\n"
+    "- 布尔型转浮点型\n",
+    "\n",
+    "> Python 中布尔型是 int 类型的子类型，详细解释在[布尔型]('./bool.ipynb')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1+2j)"
+       "1.0"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 复数类型字面值\n",
-    "1 + 2j"
+    "float(True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 复数创建\n",
-    "\n",
-    "`complex` 方法接收两个参数，分别对应复数的实部和虚部，虚部如果不传则默认为 0\n"
+    "- 整型转浮点型\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-3+0j)"
+       "2.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 通过 complex 方法创建一个默认为 0j 的复数\n",
-    "complex()\n",
+    "float(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 实现了 `__float__` 方法的对象\n",
     "\n",
-    "# 虚部不传，1+0j\n",
-    "complex(1)\n",
+    "> 方法 `float` 调用对象内部的魔术方法 `__float__` 完成浮点数转换。\n",
     "\n",
-    "# 浮点数，-1.1-1.2j\n",
-    "complex(-1.1, -1.2)\n",
+    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class MyFloatClass:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
     "\n",
-    "# 布尔型，-1j（再啰嗦一遍，python 中布尔型是整型的子类型）\n",
-    "complex(+False, -True)\n",
+    "    # 注意：__float__ 返回的必须是 float 型\n",
+    "    def __float__(self) -> int:\n",
+    "        return self.value\n",
     "\n",
-    "# 整数字面值字符串，可以带正负号，首尾也可以有空格\n",
-    "# 注意：complex 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须是数字\n",
-    "# 还有：complex 参数不支持字节串或者字节数组\n",
-    "complex(\" -3 \")\n",
     "\n",
-    "# complex(\"-3\", 3)  # 错\n",
-    "# complex(-3, \"3\")  # 错\n",
-    "# complex(b\"3\")  # 错"
+    "my_num = MyFloatClass(20.0)\n",
+    "float(my_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.0"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 整数字面值字符串\n",
+    "float(\"42\")\n",
+    "\n",
+    "# 负整数字面值字符串\n",
+    "float(\"  -42  \")\n",
+    "\n",
+    "# 科学计数字面值字符串\n",
+    "float(\"1.23e-4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `complex`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 复数创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 复数类型字面值\n",
+    "1 + 2j\n",
+    "\n",
+    "# 通过 complex 方法创建一个默认值为 0j 的复数\n",
+    "complex()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> `complex` 方法接收两个参数，分别对应复数的实部和虚部，虚部如果不传则默认为 `0`。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 虚部不传\n",
+    "complex(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 浮点数\n",
+    "complex(-1.1, -1.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complex(+False, -True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 复数转换\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 整数字面值字符串\n",
+    "\n",
+    "  整数字面值字符串，可以带正负号，首尾也可以有空格\n",
+    "\n",
+    "> `complex` 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须都是数字。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complex(\" -3 \")"
    ]
   },
   {
