--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `int`\n"
+    "## `int` 整型\n"
    ]
   },
   {
@@ -44,14 +44,14 @@
     }
    ],
    "source": [
-    "# 字面值形式\n",
+    "# 使用字面值形式\n",
     "# 正整数\n",
     "1\n",
-    "\n",
     "# 负整数\n",
     "-1\n",
     "\n",
-    "# 通过 int 方法创建一个默认值为 0 的整数\n",
+    "# 使用 int 方法\n",
+    "# 创建一个默认值为 0 的整数\n",
     "int()"
    ]
   },
@@ -61,7 +61,7 @@
    "source": [
     "### 整型转换\n",
     "\n",
-    "整数的类型转换用的还是上面的 `int` 方法。\n"
+    "整数的类型转换用的还是 `int` 方法。\n"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "source": [
     "- 布尔型转整型\n",
     "\n",
-    "> Python 中布尔型是 `int` 类型的子类型，详细解释在[布尔型]('./bool.ipynb')\n"
+    "> Python 中布尔型是 `int` 类型的子类型，详细解释在[布尔型]('./bool.ipynb')。\n"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "source": [
     "- 浮点型转整型\n",
     "\n",
-    "> 向 `0` 靠近，保留整数\n"
+    "> 向 `0` 靠近，保留整数。\n"
    ]
   },
   {
@@ -215,8 +215,15 @@
     "int(\"42\")\n",
     "\n",
     "# 负整数字面值字符串\n",
-    "int(\"  -42  \")\n",
-    "\n",
+    "int(\"  -42  \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 解析为十进制\n",
     "int(\"42\", 0)\n",
     "\n",
@@ -256,10 +263,8 @@
    ],
    "source": [
     "# 字面值形式\n",
-    "\n",
     "# 小数\n",
     "1.1\n",
-    "\n",
     "# 科学计数法表示\n",
     "2.5e2\n",
     "\n",
